--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="services-grids">
 					<a class="fa fa-globe" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">I have taken a big intrest in web development recently,especially building responsive website.I made this portfolio website.</p>
+					<p class="para-agileits-w3layouts">I have taken a big interest in web development recently,especially building responsive website.I made this portfolio website.</p>
 					<h6>Website Development</h6>
 				</div>
 				<div class="services-grids">
