--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="services-grids">
 					<a class="fa fa-globe" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">I have taken a big interest in web development recently,especially building responsive website.I made this portfolio website.</p>
+					<p class="para-agileits-w3layouts">I have taken a big interest in web development recently,especially building responsive websites.I made this portfolio website.</p>
 					<h6>Website Development</h6>
 				</div>
 				<div class="services-grids">
 					<a class="fa fa-mobile" aria-hidden="true"></a>
-					<p class="para-agileits-w3layouts">I used to built applications using Java,React and Flutter.<br><br><br></p>
+					<p class="para-agileits-w3layouts">I used to build applications using Java,React and Flutter.<br><br><br></p>
 					<h6>Android Applications</h6>
 				</div>
 				
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="person-info-agileits-w3layouts">
 					<p class="para-agileits-w3layouts"><span>Hi!, Iam Nirmal </span>a Full-stack Web Developer based out of Kerala. I'm an engineering student currently pursuing final year in Electronics And Communication.
-						I love combaining the worlds of logic and creative design to make eye-catching,user-friendly and accessible Website and Applications.</p>
+						I love combining the worlds of logic and creative design to make eye-catching,user-friendly and accessible Website and Applications.</p>
 					<ul>
 						<li><span>Name</span>: Nirmal Babu</li>
 						<li><span>Age</span>: 22 Years</li>
@@ -174,7 +174,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>St.Marys HSS</h5>
-							<p class="para-agileits-w3layouts">I done my higher secondary education here on 2018. And i got awarded a total of 84% in the accademic year.</p>
+							<p class="para-agileits-w3layouts">I completed my higher secondary education here on 2018. And I got awarded a total of 84% in the accademic year.</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
