--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Author: Nirmal
 <html lang="en">
 
 <head>
-	<title>Nirmal Web</title>
+	<title>Nirmal</title>
 	<!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
